// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip> Component basic usage with attributes 1`] = `
<bolt-chip data-attr="some attribute">
  <replace-with-grandchildren>
    <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
          is="shadow-root"
    >
      <replace-with-children class="c-bolt-chip__text">
        This is a chip
      </replace-with-children>
    </span>
  </replace-with-grandchildren>
</bolt-chip>
`;

exports[`<bolt-chip> Component with link 1`] = `
<bolt-chip url="!#">
  <replace-with-grandchildren>
    <a href="!#"
       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
       is="shadow-root"
    >
      <replace-with-children class="c-bolt-chip__text">
        This is a chip with link
      </replace-with-children>
    </a>
  </replace-with-grandchildren>
</bolt-chip>
`;
